Fix margin, padding, alignment, and font size

--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -1,27 +1,42 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  
 }
 
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 10px;
+  margin-bottom: 16px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 8px;
+  margin-top: 4px;
+  margin-bottom: 8px;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  margin-bottom: 8px;
+  padding: 16px;
 }
 
 .button-container {
   background: #e3f4ff;
+  display: block;
+  text-align: center;
+  padding: 8px;
 }
 
 button {
   background: white;
-  border: 1px solid #eee;
+  border: 2px solid #eee;
+  padding: 10px;
+  display: block;
+  margin: auto
 }
